changing links to try and fix render error

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="./assets/styles/jass.css" />
+    <link rel="stylesheet" href="./Assets/styles/main.css" />
     <title>Weather Dashboard</title>
   </head>
   <body>
@@ -84,6 +85,6 @@
       integrity="sha512-pslqxxHAYPCxaSeFSmXXxDkLejD5dbFVC66aiVq0z4v7VTJBU+wqcG1OpNh4p3MjS2D6NCwz/H2QmSc7dXxryg=="
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/script.js"></script>
+    <script src="./Assets/script.js"></script>
   </body>
 </html>
